debugging which tests actually fail

--- a/tox.ini
+++ b/tox.ini
@@ -45,7 +45,12 @@ commands =
 [testenv:main]
 commands =
     make update_deps
-    py.test --create-db -n 2 -m 'not es_tests' -v src/olympia/ --ignore src/olympia/addons/ --ignore src/olympia/devhub/ --ignore src/olympia/editors/ --ignore src/olympia/amo/ --ignore src/olympia/users/ {posargs}
+    py.test --create-db -n 2 -m 'not es_tests' -v src/olympia/ --ignore src/olympia/addons/ --ignore src/olympia/devhub/ --ignore src/olympia/editors/ --ignore src/olympia/amo/ --ignore src/olympia/users/ --ignore src/olympia/versions/ --ignore src/olympia/zadmin/ {posargs}
+
+[testenv:remaining]
+commands =
+    make update_deps
+    py.test --create-db -n 2 -m 'not es_tests' -v src/olympia/zadmin/ -v src/olympia/versions/ {posargs}
 
 [testenv:ui-tests]
 passenv = DISPLAY
