--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,7 @@
 [tox]
-envlist = es, addons, devhub, editors, main, ui-tests, flake8, docs, assets
+envlist = py{27,35}, es, addons, devhub, editors, main, ui-tests, flake8, docs, assets
 
 [testenv]
-basepython = python2.7
 install_command = pip install --no-deps {packages}
 setenv =
     PYTHONPATH=src
