specify Makefile to use because Travis doesn't run in a container

--- a/tox.ini
+++ b/tox.ini
@@ -14,50 +14,50 @@ whitelist_externals =
 
 [testenv:es]
 commands =
-    make update_deps
+    make -f Makefile-docker update_deps
     py.test -m es_tests --ignore=tests/ui/ -v {posargs}
 
 [testenv:addons]
 commands =
-    make update_deps
+    make -f Makefile-docker update_deps
     py.test --create-db -n 2 -m 'not es_tests' -v src/olympia/addons/ {posargs}
 
 [testenv:devhub]
 commands =
-    make update_deps
+    make -f Makefile-docker update_deps
     py.test --create-db -n 2 -m 'not es_tests' -v src/olympia/devhub/ {posargs}
 
 [testenv:editors]
 commands =
-    make update_deps
+    make -f Makefile-docker update_deps
     py.test --create-db -n 2 -m 'not es_tests' -v src/olympia/editors/ {posargs}
 
 [testenv:amo]
 commands =
-    make update_deps
+    make -f Makefile-docker update_deps
     py.test --create-db -n 2 -m 'not es_tests' -v src/olympia/amo/ {posargs}
 
 [testenv:users]
 commands =
-    make update_deps
+    make -f Makefile-docker update_deps
     py.test --create-db -n 2 -m 'not es_tests' -v src/olympia/users/ {posargs}
 
 [testenv:main]
 commands =
-    make update_deps
+    make -f Makefile-docker update_deps
     py.test --create-db -n 2 -m 'not es_tests' -v src/olympia/ --ignore src/olympia/addons/ --ignore src/olympia/devhub/ --ignore src/olympia/editors/ --ignore src/olympia/amo/ --ignore src/olympia/users/ {posargs}
 
 [testenv:ui-tests]
 passenv = DISPLAY PYTEST_ADDOPTS PYTEST_BASE_URL ELASTICSEARCH_LOCATION
 commands =
-    make update_deps
+    make -f Makefile-docker update_deps
     pip install --exists-action=w -r tests/ui/requirements.txt
     pytest --boxed --driver Firefox -v tests/ui {posargs}
 
 [testenv:assets]
 commands =
-    make update_deps
-    make update_assets
+    make -f Makefile-docker update_deps
+    make -f Makefile-docker update_assets
 
 [testenv:flake8]
 recreate = True
@@ -70,4 +70,4 @@ commands =
 commands =
     pip install --upgrade pip six setuptools
     pip install -r requirements/docs.txt
-    make docs SPHINXOPTS='-nW'
+    make -f Makefile-docker docs SPHINXOPTS='-nW'
