fix make self references within the file

--- a/Makefile-docker
+++ b/Makefile-docker
@@ -91,16 +91,16 @@ install_python_dependencies:
 	pip install --no-deps --exists-action=w -r requirements/docs.txt
 	pip install --no-deps --exists-action=w -r requirements/prod_without_hash.txt
 
-install_node_dependencies:
+install_node_dependencies: install_node_js copy_node_js
+
+install_node_js:
 	npm install $(NPM_ARGS)
-	$(MAKE) copy_node_js
 
 copy_node_js:
 	for dest in $(NODE_LIBS_JS) ; do cp $(NODE_MODULES)$$dest $(STATIC_JS) ; done
 	for dest in $(NODE_LIBS_JQUERY_UI) ; do cp $(NODE_MODULES)$$dest $(STATIC_JQUERY_UI) ; done
 
-update_deps:
-	$(MAKE) install_python_dependencies install_node_dependencies
+update_deps: install_python_dependencies install_node_dependencies
 
 update_db:
 	schematic src/olympia/migrations
@@ -109,12 +109,10 @@ update_assets:
 	python manage.py compress_assets --use-uuid
 	python manage.py collectstatic --noinput
 
-update:
-	$(MAKE) update_deps update_db update_assets
+update: update_deps update_db update_assets
 	python manage.py update_permissions_from_mc
 
 reindex:
 	python manage.py reindex $(ARGS)
 
-initialize:
-	$(MAKE) update_deps initialize_db update_assets populate_data
+initialize: update_deps initialize_db update_assets populate_data
