--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "underscore": "1.8.3"
   },
   "devDependencies": {
-    "potools": "0.0.6"
+    "potools": "0.0.6",
+    "retire": "1.3.2"
   }
 }
